k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hkandchill
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hkandchill
