k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: hkandchill
  namespace: default
spec:
  rules:
  - host: hkandchill.inyour.space
    http:
      paths:
      - backend:
          serviceName: hkandchill
          servicePort: 80
        path: /
  tls:
  - hosts:
    - hkandchill.inyour.space
    secretName: hkandchill-cert
status:
  loadBalancer:
    ingress:
    - ip: 139.59.199.248
